hard-gists/4981937/run.log
=== Docker Run Log for 4981937 ===
Started at: Mi 29. Okt 15:05:09 CET 2025

[2025-10-29 15:05:10] START: Running container for 4981937
[2025-10-29 15:05:10] SUCCESS: Container c5707dadf50294fb0413d19be696989eb2bc48f6fab976173f52c499d2d19977 started for 4981937
=== Container logs for 4981937 ===
  File "/snippet.py", line 20
    print "Starting TILT Cycle"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4981937 ===
[2025-10-29 15:05:12] INFO: Container c5707dadf50294fb0413d19be696989eb2bc48f6fab976173f52c499d2d19977 has stopped
